openoffice-base-devel - 3.0_dev300_m31-2
- use new OOo svn for checkout
- make dict deployement invisible
- fix build with new openjdk6 with rhino
- disable-evolution2 build

openoffice-base-devel - 3.0_dev300_m31-1
- fix build with system hsqldb-java
- fixes for dict deployement

openoffice-base-devel - 3.0_dev300_m30-1
- build with system hsqldb is broken
- move some deps to optdepends

openoffice-base-devel - 3.0_dev300_m29-2
- rebuild for icu4.0
- remove unneeded xmlsec makedep
- link soffice.bin/dev.bin

openoffice-base-devel - 3.0_dev300_m29-1
- build with openjdk6 (with rhino removed)
- patch cleanup
- build with system icu again
- build with system xmlsec again

openoffice-base-devel - 3.0_dev300_m26-1
- fix jvmfwk-gij-paths.diff
- fix buildfix-gcc43.diff
- fix buildfix-systemhunspell.diff
- fix fix-font-hinting.diff
- added --with-system-dicts
- disable binfilter, currently (smp build) broken 
  we don't need it anymore
- try to build with-system-boost again
- remove --disable-qadevooo
  http://www.openoffice.org/issues/show_bug.cgi?id=91452

openoffice-base-devel - 3.0_dev300_m19-1
- back to gcc-gcj 4.3.1
- fix jvmfwk-gij-paths.diff
- add build verbose switch

openoffice-base-devel - 3.0_dev300_m14-1
- major dependency cleanup
- (our) gcj build is currently broken - so we use SUN jdk now

openoffice-base-devel - 3.0_dev300_m11-1
- gtkunixprintdialog.patch disabledabled again, patch won't apply
- fixed mozilla flavor to "xulrunner"
  (libxul is now default for upcoming xulrunner 1.9 renamed to libxul)  

openoffice-base-devel - 3.0_dev300_m10-1 (i686 only)
- use openoffice.org-2.0.3.rh127576.gtkunixprintdialog.patch
  from Fedora for new gtkunixprintdialog.diff
- added md5sums

openoffice-base-devel - 3.0_dev300_m10-1
- back to system-cairo usage
# - stoponerrors enabled (not yet working)

openoffice-base-devel - 2.4_src680_m239-1
- removed internal-no-db patch
- fixed jvmfwk/gstreamer patches

openoffice-base-devel - 2.4_src680_m238-1