@@ -3,20 +3,10 @@ post_install() {
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
 
-echo " >>KDE integration is no longer supported!<<"
-echo " ----------------------------------------------------"
-echo " Please preset Gnome appearance always with"
-echo " \"export OOO_FORCE_DESKTOP=gnome\" even when"
-echo " you are runnning a different desktop!"
-echo " or put it in /etc/profile, rc.local, or ~/.bashrc"
-echo " ----------------------------------------------------"
 echo " see http://wiki.archlinux.org/index.php/Openoffice"
-echo " how to use extensions now for spell checking"
-echo " see extension manager what is shipped in the package"
-echo " ----------------------------------------------------"
-for i in `ls -1 /opt/openoffice-dev/share/extension/install/dict-??.oxt`; do
-  /opt/openoffice-dev/program/unopkg add --shared --force $i &> /dev/null
-done
+echo " how to use extensions, e.g. for spell checking"
+echo " see /opt/openoffice-dev/share/extension/install what"
+echo " is shipped with this package"
 }
 
 post_upgrade() {
@@ -27,11 +17,7 @@ post_remove() {
 update-desktop-database -q
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 
-# make sure everything is gone
+# make sure everything is gone, maybe someone has installed
+# extensions for all users using unopkg --shared
 rm -rf /opt/openoffice-dev
 }
-
-op=$1
-shift
-$op $*
-
