@@ -1,3 +1,7 @@
+openoffice-base-devel - 3.1_dev300_m33-1
+- new devel snapshot
+- synchronise with fixes made in the stable pkg
+
 openoffice-base-devel - 3.0_dev300_m31-2
 - use new OOo svn for checkout
 - make dict deployement invisible
